{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 23,
  "lineage": "8ec55b13-a5d8-672c-bf19-1670275eff37",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060a46e69da9de836",
            "arn": "arn:aws:ec2:us-east-1:654123612490:elastic-ip/eipalloc-060a46e69da9de836",
            "domain": "vpc",
            "id": "eipalloc-060a46e69da9de836",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-191-5.compute-1.amazonaws.com",
            "public_ip": "50.16.191.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taco_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ace34e9f53c91c5d",
            "arn": "arn:aws:ec2:us-east-1:654123612490:instance/i-0e97458004461de03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e97458004461de03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d810adae5392326",
            "private_dns": "ip-10-0-0-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.41",
            "public_dns": "ec2-54-145-198-191.compute-1.amazonaws.com",
            "public_ip": "54.145.198.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f36737861a1de400",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e2a6524347bc800",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2401c5eebe76f9a"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taco_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ace34e9f53c91c5d",
            "arn": "arn:aws:ec2:us-east-1:654123612490:instance/i-038dc99511466196f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038dc99511466196f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067223baac93c3030",
            "private_dns": "ip-10-0-1-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-3-90-153-77.compute-1.amazonaws.com",
            "public_ip": "3.90.153.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0751245f88074509f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c88442cca5b0ff81",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2401c5eebe76f9a"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:internet-gateway/igw-074d7eb16b9b26e98",
            "id": "igw-074d7eb16b9b26e98",
            "owner_id": "654123612490",
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:loadbalancer/app/globo-web-lb/9ea3f17cca38e246",
            "arn_suffix": "app/globo-web-lb/9ea3f17cca38e246",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-lb-498008375.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654123612490:loadbalancer/app/globo-web-lb/9ea3f17cca38e246",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a2c6099b82681677"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e2a6524347bc800"
              },
              {
                "subnet_id": "subnet-0c88442cca5b0ff81"
              }
            ],
            "subnets": [
              "subnet-00e2a6524347bc800",
              "subnet-0c88442cca5b0ff81"
            ],
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "vpc_id": "vpc-058fb650d32d09e9c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:listener/app/globo-web-lb/9ea3f17cca38e246/bea9dab9a1dc9b56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654123612490:listener/app/globo-web-lb/9ea3f17cca38e246/bea9dab9a1dc9b56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:loadbalancer/app/globo-web-lb/9ea3f17cca38e246",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.alb_tg_1",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c",
            "arn_suffix": "targetgroup/lb-target-group-1/e84b032627ab4c8c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "taco_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c-20250227132218095800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c",
            "target_id": "i-0e97458004461de03"
          },
          "dependencies": [
            "aws_instance.taco_instance_1",
            "aws_lb_target_group.alb_tg_1",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "taco_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c-20250227132217537000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654123612490:targetgroup/lb-target-group-1/e84b032627ab4c8c",
            "target_id": "i-038dc99511466196f"
          },
          "dependencies": [
            "aws_instance.taco_instance_2",
            "aws_lb_target_group.alb_tg_1",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060a46e69da9de836",
            "association_id": "eipassoc-0f02c1fdf79ced8ba",
            "connectivity_type": "public",
            "id": "nat-06970a82de98a577b",
            "network_interface_id": "eni-0fe66c863c351fadf",
            "private_ip": "10.0.0.230",
            "public_ip": "50.16.191.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e2a6524347bc800",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:route-table/rtb-03eaf266a8f5b2c7e",
            "id": "rtb-03eaf266a8f5b2c7e",
            "owner_id": "654123612490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074d7eb16b9b26e98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:route-table/rtb-08835c9d283918c1a",
            "id": "rtb-08835c9d283918c1a",
            "owner_id": "654123612490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06970a82de98a577b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04633d407cda1c64c",
            "route_table_id": "rtb-08835c9d283918c1a",
            "subnet_id": "subnet-05141df00fc942027"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6ed33634606c67",
            "route_table_id": "rtb-03eaf266a8f5b2c7e",
            "subnet_id": "subnet-00e2a6524347bc800"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aefd77cb09dd9342",
            "route_table_id": "rtb-03eaf266a8f5b2c7e",
            "subnet_id": "subnet-0c88442cca5b0ff81"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:security-group/sg-0a2c6099b82681677",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2c6099b82681677",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "654123612490",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:security-group/sg-0153fc60842e87e70",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0153fc60842e87e70",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "654123612490",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:security-group/sg-0d2401c5eebe76f9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2401c5eebe76f9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "654123612490",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:subnet/subnet-05141df00fc942027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05141df00fc942027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654123612490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:subnet/subnet-00e2a6524347bc800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e2a6524347bc800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654123612490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:subnet/subnet-0c88442cca5b0ff81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c88442cca5b0ff81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654123612490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "vpc_id": "vpc-058fb650d32d09e9c"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654123612490:vpc/vpc-058fb650d32d09e9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a04bc4531defc53",
            "default_route_table_id": "rtb-0b9be6e302197ce4f",
            "default_security_group_id": "sg-079ba57b091a69d37",
            "dhcp_options_id": "dopt-09781ceeccff0f962",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058fb650d32d09e9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9be6e302197ce4f",
            "owner_id": "654123612490",
            "tags": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            },
            "tags_all": {
              "billing_code": "Terraform-Test-Billing-Code",
              "company": "Terraform-Test",
              "project": "Terraform-Test-Terraform-Test-Project"
            }
          }
        }
      ]
    }
  ]
}